--- a/Soccer2/Views/Home/Index.cshtml
+++ b/Soccer2/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
     @foreach (var item in Model)
     {
         @item.Date;
+        @item.Date;
         <&nbsp></&nbsp>
         @item.GameId;
         <&nbsp></&nbsp>
@@ -26,7 +27,6 @@
         <&nbsp></&nbsp>
         @item.AwayCoef;
         <&nbsp></&nbsp>
-        @item.Winner;
         @item.Winner;
         <br />
     }
