--- a/Soccer2/Views/Home/Index.cshtml
+++ b/Soccer2/Views/Home/Index.cshtml
@@ -12,6 +12,7 @@
     {
         @item.Date;
         @item.Date;
+        @item.Date;
         <&nbsp></&nbsp>
         @item.GameId;
         <&nbsp></&nbsp>
