--- a/Soccer2/Views/Home/Index.cshtml
+++ b/Soccer2/Views/Home/Index.cshtml
@@ -13,6 +13,7 @@
         @item.Date;
         @item.Date;
         @item.Date;
+        @item.Date;
         <&nbsp></&nbsp>
         @item.GameId;
         <&nbsp></&nbsp>
