--- a/Soccer2/Views/Home/TeamsInformation.cshtml
+++ b/Soccer2/Views/Home/TeamsInformation.cshtml
@@ -11,7 +11,7 @@
         <option value="championship">championship</option>
     </select>
     <select name="sort">
-        <option value="High">High</option>
+        <option value="High">High </option>
         <option value="Current">Current</option>
         <option value="Average">Average</option>
     </select>
@@ -21,46 +21,30 @@
 <form method="post" asp-controller="Home" asp-action="TeamsInformation">
     <button type="submit" name="league" value="premier league">Premier League</button>
 </form>
-<hr />
-<ul  >
-    <li >
-        <form method="post" asp-controller="Home" asp-action="TeamsInformation">
-            <input type="hidden" value="CurrentProbability" name="sort" />
-            <input type="submit" value="CurrentProbability"/>
-        </form>
-    </li>
-    <li>
-        <form method="post" asp-controller="Home" asp-action="TeamsInformation">
-            <input type="hidden" value="HighestProbability" name="sort" />
-            <input type="submit" value="HighestProbability" />
-        </form>
-    </li>
-    <li>
-        <form method="post" asp-controller="Home" asp-action="TeamsInformation">
-            <input type="hidden" value="AverageProbability" name="sort" />
-            <input type="submit" value="AverageProbability" />
-        </form>
-    </li>
-</ul>
-
-
+<hr /> 
 
 @foreach (var team in Model)
 {
     <div class="row">
         <div class="col-3">
             <p>Team name : <strong>@team.Name</strong></p>
-            <p>Highest : <strong>@team.HighestProbability.ToString("F2")</strong></p>
-            <p>Average:<strong> @team.AverageProbability.ToString("F2")</strong></p>
-            <p>Current : <strong>@team.CurrentProbability.ToString("F2")</strong></p>
+            <p>Highest : <strong>@team.HighestProbability.ToString("F2") %</strong></p>
+            <p>Average:<strong> @team.AverageProbability.ToString("F2") %</strong></p>
+            <p>Current : <strong>@team.CurrentProbability.ToString("F2") %</strong></p>
         </div>
         <div class="col-6">
+            @{ 
+                var count = 1;
+            }
             @foreach (var game in team.TeamGames)
             {
-
                 if (game.Winner == team.Name)
                 {
                     <div class="bg-success">
+                        @count -
+                        @{ 
+                            count++;
+                        }
                         @game.Date.ToString("yyyy-MM-dd") :
                         @game.HomeTeamName -
                         @if (game.Winner == game.HomeTeamName)
@@ -81,31 +65,39 @@
                 }
                 else if (game.Winner == "x")
                 {
-                    <div class="bg-warning">
-                        @game.Date.ToString("yyyy-MM-dd") :
-                        @game.HomeTeamName -
-                        @game.HomeCoef - <strong>@game.DrawCoef</strong> - @game.AwayCoef - @game.AwayTeamName  @game.HomeResult : @game.AwayResult
-                    </div>
+        <div class="bg-warning">
+            @count -
+            @{
+                count++;
+            }
+            @game.Date.ToString("yyyy-MM-dd") :
+            @game.HomeTeamName -
+            @game.HomeCoef - <strong>@game.DrawCoef</strong> - @game.AwayCoef - @game.AwayTeamName  @game.HomeResult : @game.AwayResult
+        </div>
                 }
                 else
                 {
-                    <div class="bg-danger">
-                        @game.Date.ToString("yyyy-MM-dd") :
-                        @game.HomeTeamName
-                        @if (game.Winner == game.HomeTeamName)
-                        {
-                            <nobr><strong>@game.HomeCoef</strong> - @game.DrawCoef -   @game.AwayCoef</nobr>
-                        }
-                        else
-                        {
-                            <nobr>
-                                @game.HomeCoef -
-                                @game.DrawCoef -
-                                <strong>@game.AwayCoef</strong>
-                            </nobr>
-                        }
-                        - @game.AwayTeamName  @game.HomeResult : @game.AwayResult
-                    </div>
+        <div class="bg-danger">
+            @count - 
+            @{
+                count++;
+            }
+            @game.Date.ToString("yyyy-MM-dd") :
+            @game.HomeTeamName
+            @if (game.Winner == game.HomeTeamName)
+            {
+                <nobr><strong>@game.HomeCoef</strong> - @game.DrawCoef -   @game.AwayCoef</nobr>
+            }
+            else
+            {
+                <nobr>
+                    @game.HomeCoef -
+                    @game.DrawCoef -
+                    <strong>@game.AwayCoef</strong>
+                </nobr>
+            }
+            - @game.AwayTeamName  @game.HomeResult : @game.AwayResult
+        </div>
                 }
 
             }
