--- a/Soccer2/Views/Shared/_Layout.cshtml
+++ b/Soccer2/Views/Shared/_Layout.cshtml
@@ -20,25 +20,16 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Test">Test</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Scrp" asp-action="Scrp">Scrp</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Bet" asp-action="Bet">Bet</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Test" asp-action="Test">Test</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TeamsInformation">TeamInformation</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TeamsInformation">TeamInformation</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Statistics" asp-action="Stats">Stats</a>
                         </li>
                     </ul>
                 </div>
