--- a/Soccer2/Views/Statistics/Stats.cshtml
+++ b/Soccer2/Views/Statistics/Stats.cshtml
@@ -14,7 +14,7 @@
                      Bulgaria
                  </button>
                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                     <a class="dropdown-item" href="stats/1">Purva liga</a>
+                     <a class="dropdown-item" href="/statistics/stats/1">Purva liga</a>
                  </div>
              </li>
              <li>
@@ -22,7 +22,7 @@
                      England
                  </button>
                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                     <a class="dropdown-item" href="stats/2">Premier league</a>
+                     <a class="dropdown-item" href="/statistics/stats/2">Premier league</a>
                      <a class="dropdown-item" href="championship">Championship</a>
                  </div>
              </li>
