--- a/Soccer2/Views/Shared/_Layout.cshtml
+++ b/Soccer2/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Statistics" asp-action="Stats">Stats</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Statistics" asp-action="Teams">Teams</a>
+                        </li>
                     </ul>
                 </div>
             </div>
