--- a/Soccer2/Views/_ViewImports.cshtml
+++ b/Soccer2/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Soccer2
 @using Soccer2.Models
 @using Soccer2.Data
+@using Soccer2.Services.Model
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
