--- a/Soccer2/Views/Statistics/Stats.cshtml
+++ b/Soccer2/Views/Statistics/Stats.cshtml
@@ -47,7 +47,7 @@
      <div class="col-10 border">
          @foreach (var team in Model)
          {
-             <p>@team.Name</p>
+             <p><a href="/statistics/team/@team.Name">@team.Name</a></p>
          }
      </div>
 </div>
