--- a/Soccer2/Views/Statistics/Stats.cshtml
+++ b/Soccer2/Views/Statistics/Stats.cshtml
@@ -4,8 +4,20 @@
     {
         padding: 5px;
     }
-
 </style>
+
+    <nav aria-label="Page navigation example" >
+    <ul class="pagination" >
+    <li class="page-item" > <a class="page-link" href="#" > Previous</a > </li >
+    <li class="page-item" > <a class="page-link" href="#" > 1</a > </li >
+    <li class="page-item" > <a class="page-link" href="#" > 2</a > </li >
+    <li class="page-item" > <a class="page-link" href="#" > 3</a > </li >
+    <li class="page-item" > <a class="page-link" href="#" > 4</a > </li >
+    <li class="page-item" > <a class="page-link" href="#" > 5</a > </li >
+    <li class="page-item" > <a class="page-link" href="#" > Next</a > </li >
+    </ul >
+    </nav >
+  
 <div class="row">
      <div class="col-2 border">
          <ul>
@@ -44,6 +56,7 @@
              </li>
          </ul>
      </div>
+
      <div class="col-10 border">
          @foreach (var team in Model)
          {
