--- a/Soccer2/Views/Statistics/Team.cshtml
+++ b/Soccer2/Views/Statistics/Team.cshtml
@@ -1,1 +1,4 @@
-﻿<p>team</p>
+﻿@model ServiceStatisticsModel
+ 
+<p>Average goals per game : @Model.AverageGoalsPerGame</p>
+<p>Tottal Goals Last Games : @Model.TottalGoalsLastGames</p>
