--- a/Soccer2/Views/Bet/Bet.cshtml
+++ b/Soccer2/Views/Bet/Bet.cshtml
@@ -1,4 +1,5 @@
 ﻿
+<h1>bet</h1>
 
 <form method="POST">
     <input type="text" placeholder="Home Team" name="HomeTeam" />
@@ -16,6 +17,5 @@
     <input type="text" placeholder="Bet Type" name="BetType" /> <br />
     <input type="text" placeholder="Current Ballance" name="CurrentBalance" /> <br />
     <input type="text" placeholder="Date" name="Date" />
-
     <input type="submit" />
 </form>
