--- a/Soccer2/Views/Bet/Bet.cshtml
+++ b/Soccer2/Views/Bet/Bet.cshtml
@@ -1,22 +1,53 @@
 ﻿
-<h1>bet</h1>
-<h1>bet</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <h1>Past</h1>
+        </div>
+        <div class="col-6">
+             <h1>Future</h1>
+        </div>
+    </div>
+</div>
+<hr />
 
-<form method="POST">
-    <input type="text" placeholder="Home Team" name="HomeTeam" />
-    <br />
-    <input type="text" placeholder="Away Team" name="AwayTeam" />
-    <br />
-    <input type="text" placeholder="Home Team Result" name="HomeResult" />
-    <br />
-    <input type="text" placeholder="Away Team Result" name="AwayResult" /> <br />
-    <input type="text" placeholder="Home Coef" name="HomeCoef" /> <br />
-    <input type="text" placeholder="Draw Coef" name="DrawCoef" /> <br />
-    <input type="text" placeholder="Away Coef" name="AwayCoef" /> <br />
-    <input type="text" placeholder="Bet" name="Bet" /> <br />
-    <input type="text" placeholder="Bet Coef" name="BetCoef" /> <br />
-    <input type="text" placeholder="Bet Type" name="BetType" /> <br />
-    <input type="text" placeholder="Current Ballance" name="CurrentBalance" /> <br />
-    <input type="text" placeholder="Date" name="Date" />
-    <input type="submit" />
-</form>
+<div class="container">
+    <form method="POST">
+        <div class=" row">
+            <div class="col-3">
+                <input type="text" placeholder="Home Team" name="HomeTeam" />
+            </div>
+            <div class="col-3">
+                <input type="text" placeholder="Home Team Result" name="HomeResult" />
+            </div>
+            <div class="col-3">
+                <input type="text" placeholder="Away Team Result" name="AwayResult" /> <br />
+            </div>
+            <div class="col-3">
+                <input type="text" placeholder="Away Team" name="AwayTeam" />
+            </div>
+        </div>
+        <hr />
+        <div class=" row">
+            <div class="col-4">
+                <input type="text" placeholder="Home Coef" name="HomeCoef" />
+            </div>
+            <div class="col-4">
+                <input type="text" placeholder="Draw Coef" name="DrawCoef" />
+            </div>
+            <div class="col-4">
+                <input type="text" placeholder="Away Coef" name="AwayCoef" />
+            </div>
+        </div>
+        <hr />
+        <input type="text" placeholder="Bet" name="Bet" /> <hr />
+        <input type="text" placeholder="Bet Coef" name="BetCoef" /> <hr />
+        <input type="text" placeholder="Bet Type" name="BetType" /> <hr />
+        <input type="text" placeholder="Current Ballance" name="CurrentBalance" /> <hr />
+        <input type="text" placeholder="Date" name="Date" /><hr />
+        <input type="submit" />
+    </form>
+        </div>
+<hr />
+
+<h1>Upcoming bets</h1>
