--- a/Soccer2/Views/Bet/Bet.cshtml
+++ b/Soccer2/Views/Bet/Bet.cshtml
@@ -44,10 +44,12 @@
         <input type="text" placeholder="Bet Coef" name="BetCoef" /> <hr />
         <input type="text" placeholder="Bet Type" name="BetType" /> <hr />
         <input type="text" placeholder="Current Ballance" name="CurrentBalance" /> <hr />
-        <input type="text" placeholder="Date" name="Date" /><hr />
+        <label for="birthday">Birthday:</label>
+        <input type="datetime-local"  name="Date">
         <input type="submit" />
     </form>
         </div>
 <hr />
+ 
 
 <h1>Upcoming bets</h1>
