--- a/Soccer2/Views/Bet/Bet.cshtml
+++ b/Soccer2/Views/Bet/Bet.cshtml
@@ -13,6 +13,10 @@
 <hr />
 <div class="container">
     <form method="POST">
+        <div>
+            <input type="text" placeholder="League" name="League" />
+        </div>
+        <hr />
         <div class=" row">
             <div class="col-3">
                 <input type="text" placeholder="Home Team" name="HomeTeam" />
