--- a/Soccer2/Views/Bet/Bet.cshtml
+++ b/Soccer2/Views/Bet/Bet.cshtml
@@ -1,15 +1,26 @@
-﻿
+﻿@model IEnumerable<BetInfo>
+
+
+<div class="container">
+    @foreach (var bet in Model)
+    {
+        <h1>@bet.AwayTeam</h1>
+    }
+</div>
+<hr />
 <div class="container">
     <div class="row">
-        <div class="col-6">
+        <div class="col-4">
             <h1>Past</h1>
         </div>
-        <div class="col-6">
-             <h1>Future</h1>
+        <div class="col-4">
+            <h1>Today</h1>
+        </div>
+        <div class="col-4">
+            <h1>Future</h1>
         </div>
     </div>
 </div>
-<hr />
 <hr />
 <div class="container">
     <form method="POST">
