--- a/Soccer2/Views/Bet/Bet.cshtml
+++ b/Soccer2/Views/Bet/Bet.cshtml
@@ -1,7 +1,6 @@
 ﻿@model IEnumerable<BetInfo>
 
-<h1>Bet</h1>
-
+<h1> OFFF </h1>
 <div class="container">
 </div>
 <hr />
@@ -46,7 +45,6 @@
     <tbody>
         @foreach (var bet in Model)
         {
-
         <tr>
             <td>
                 @bet.Date.ToString("yyyy-MM-dd")
@@ -84,7 +82,7 @@
         </tr>
         }
     </tbody>
-</table> 
+</table>
 <hr />
 <div class="container">
     <form method="POST">
