--- a/Soccer2/Views/Shared/_Layout.cshtml
+++ b/Soccer2/Views/Shared/_Layout.cshtml
@@ -23,9 +23,6 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Scrp" asp-action="Scrp">Scrp</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Bet" asp-action="Bet">Bet</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TeamsInformation">TeamInformation</a>
                         </li>
                         <li class="nav-item">
@@ -34,7 +31,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Statistics" asp-action="Teams">Teams</a>
                         </li>
-
+                        <li class="nav-item">
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    My Bets
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Bet" asp-action="Bet">Bet</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Bet" asp-action="AddBet">AddBet</a>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
