implement future bet

--- a/Soccer2/Views/Shared/_Layout.cshtml
+++ b/Soccer2/Views/Shared/_Layout.cshtml
@@ -39,6 +39,8 @@
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                     <a class="dropdown-item" asp-area="" asp-controller="Bet" asp-action="Bet">Bet</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="Bet" asp-action="AddBet">AddBet</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Bet" asp-action="FutureBet">FutureBet</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Bet" asp-action="AddFutureBet">AddFutureBet</a>
                                 </div>
                             </div>
                         </li>
