improved league form

--- a/Soccer2/Views/Bet/AddBet.cshtml
+++ b/Soccer2/Views/Bet/AddBet.cshtml
@@ -14,6 +14,7 @@
                     <option value="Europa League">Europa League</option>
                 </optgroup>
             </select>
+            <a class="btn" asp-controller="National" asp-action="addLeague">AddLeague</a>
         </div>
         <hr />
         <div class=" row">
