--- a/Soccer2/Views/Bet/Bet.cshtml
+++ b/Soccer2/Views/Bet/Bet.cshtml
@@ -13,6 +13,9 @@
                 @bet.Date.ToString("yy-MM-dd")
             </td>
             <td>
+                @bet.Nation
+            </td>
+            <td>
                 @bet.League
             </td>
             <td>
