--- a/Soccer2/Views/Shared/_Layout.cshtml
+++ b/Soccer2/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                                 </div>
                             </div>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Match" asp-action="Matches">Matches</a>
+                        </li>
                     </ul>
                 </div>
             </div>
